Fixed spacing for boxes

--- a/static/CSS/about.css
+++ b/static/CSS/about.css
@@ -9,7 +9,7 @@
     flex-direction: row;
     padding-bottom: 50px; 
     padding-top: 50px; 
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(255, 0, 0, 0.8);
     margin-right: 5%; 
     margin-left: 5%; 
     margin-bottom: 10px; 
